# PolyPwnCTF-2025-Challenges

./: README.md
0_Rules/Règles/: README.md  challenge.yml
AI/Etude de Popcorn/: README.md  challenge.yml
AI/Etude de Popcorn 2/: README.md  challenge.yml
AI/exMachinhack/: README.md  challenge.yml  dockerfile
Cryptography/DaVinciCode/: README.md  challenge.yml
Cryptography/Interstellar1/: README.md  challenge.yml
Cryptography/Interstellar2/: Dockerfile  README.md  challenge.yml  docker-compose.yml
Cryptography/Interstellar3/: README.md  challenge.yml
Forensic/Localiser le soldat Ryan/: README.md  challenge.yml
Forensic/TresorNational/: README.md  challenge.yml
Forensic/Up - Photos souvenirs/: README.md  challenge.yml
MISC/Crochetage/: challenge.yml
MISC/Oceans1/: challenge.yml
MISC/Oceans2/: challenge.yml
MISC/Oceans3/: challenge.yml
MISC/Operation Dark Sabotage 1/: challenge.yml
MISC/Operation Dark Sabotage 2/: challenge.yml
MISC/Operation Dark Sabotage 3/: Dockerfile  README.md  challenge.yml  flag.txt  run.sh
MISC/Operation Dark Sabotage 4/: README.md  challenge.yml  flag.txt  run.sh  src.c
MISC/Shrak into my castle/: challenge.yml
MISC/Shrak into my castle 2/: challenge.yml
MISC/Yoda Calculator/: Dockerfile  README.md  challenge.yml
MISC/sherlHack 2/: README.md  challenge.yml
Misc/Oceans1/: challenge.yml  docker-compose.yml
Misc/Oceans2/: challenge.yml
Misc/Oceans3/: challenge.yml
Misc/Operation Dark Sabotage 1/: Dockerfile  README.md  challenge.yml  flag.txt  run.sh  src.c
Misc/Operation Dark Sabotage 2/: Dockerfile  README.md  challenge.yml  flag.txt  run.sh
Misc/Operation Dark Sabotage 3/: Dockerfile  challenge.yml
Misc/Operation Dark Sabotage 4/: Dockerfile  challenge.yml
Misc/Yoda Calculator/: challenge.yml  flag.txt  jail_src.py  run.sh
Misc/sherlHack 2/: challenge.yml
Network/TitaNIC/: README.md  challenge.yml
OSINT/Hack me if you can 1/: README.md  challenge.yml
OSINT/Hack me if you can 2/: README.md  challenge.yml
OSINT/Hack me if you can 3/: README.md  challenge.yml
OSINT/Hack me if you can 4/: README.md  challenge.yml
OSINT/Hack me if you can 5/: README.md  challenge.yml
Programming/Order66/: Dockerfile  README.md  challenge.yml  flag.txt  order66.c  run.sh
Programming/Plats en Pagaille/: Dockerfile  README.md  challenge.yml
Programming/hackladdin1/: README.md  challenge.yml  dockerfile
Programming/hackladdin2/: README.md  challenge.yml
Propolys/Propolys/: challenge.yml
Pwn/Be a jedi/: Dockerfile  README.md  challenge.yml  flag.txt  jedi  jedi.c  run.sh
Pwn/Empire Server/: Dockerfile  README.md  challenge.yml  flag.txt  republic_web_server  run.sh  start_services.sh
Pwn/Padawan/: Dockerfile  README.md  challenge.yml  flag.txt  padawan  run.sh  src.c
Pwn/Shared file/: Dockerfile  Makefile  README.md  challenge.yml  client  client.c  flag.txt  gadget.s  run.sh  server  server.c  start_services.sh
Pwn/unsafe-rust/: Dockerfile  README.md  challenge.yml
Radiofrequency/UnmASK_the_Joker/: README.md  challenge.yml
Reverse/Galatic Encryption/: README.md  binary  challenge.yml  src.c
Reverse/Secret Data/: README.md  challenge.yml  secret  src.c
Stegano/Hackside Out/: README.md  challenge.yml
Stegano/Hackside Out 2/: README.md  challenge.yml
Stegano/HootysHexedHiccups/: README.md  challenge.yml  encode.py
Stegano/burrito/: .gitignore  README.md  burrito.blend  challenge.yml
Stegano/decode of the rings/: README.md  challenge.yml
Stegano/hi-im-janet-3/: README.md  challenge.yml
Stegano/sherlHack/: README.md  challenge.yml
VideoGames/CinemAventure - Harry Potter/: challenge.yml
VideoGames/CinemAventure - Inception/: README.md  challenge.yml
VideoGames/HackToTheFutureCriticalSpeed/: CMakeLists.txt  README.md  challenge.yml  flags.h  mingw.cmake
VideoGames/HackToTheFutureCriticalSpeed/data/anims/: idle.fbx  run.fbx  walking.fbx
VideoGames/HackToTheFutureCriticalSpeed/data/delorean/: delorean.mtl  license.txt
VideoGames/HackToTheFutureCriticalSpeed/data/doc/: doc.b3d  doc.fbx
VideoGames/HackToTheFutureCriticalSpeed/data/font/: dseg14.xml  liberation.xml
VideoGames/HackToTheFutureCriticalSpeed/data/level1/: mall.mtl
VideoGames/HackToTheFutureCriticalSpeed/data/marty/: marty.b3d
VideoGames/HackToTheFutureCriticalSpeed/include/: Character.h  Dialog.h  Entity.h  Flags.h  Game.h  Level1.h  Menu.h  NpcCharacter.h  Scene.h  Scene3D.h  TPCamera.h  Vehicle.h  shadow.h
VideoGames/HackToTheFutureCriticalSpeed/solution/: solution.md
VideoGames/HackToTheFutureCriticalSpeed/src/: Character.cpp  Dialog.cpp  Game.cpp  Level1.cpp  Menu.cpp  NpcCharacter.cpp  Scene3D.cpp  TPCamera.cpp  Vehicle.cpp  main.cpp  shadow.c  shadow_obfs.c
(+309 files in other folders)
